@@ -145,6 +145,7 @@ public:
 				CompSize   &size,
 				void       *&data));
     MOCK_METHOD0(desktopWindowCount, int ());
+    MOCK_METHOD0(opaqueDesktopWindowCount, int ());
     MOCK_METHOD0(attrib, XWindowAttributes ());
     MOCK_CONST_METHOD0(defaultIcon, CompIcon *());
     virtual bool otherGrabExist (const char *, ...) { return false; }  // TODO How to mock?
@@ -183,7 +184,9 @@ public:
     MOCK_METHOD0(snDisplay, SnDisplay * ());
     MOCK_CONST_METHOD0(createFailed, bool ());
     MOCK_METHOD0(incrementDesktopWindowCount, void ());
+    MOCK_METHOD0(incrementOpaqueDesktopWindowCount, void ());
     MOCK_METHOD0(decrementDesktopWindowCount, void ());
+    MOCK_METHOD0(decrementOpaqueDesktopWindowCount, void ());
     MOCK_METHOD0(nextMapNum, unsigned int ());
     MOCK_CONST_METHOD0(updatePassiveKeyGrabs, void ());
     MOCK_METHOD1(updatePassiveButtonGrabs, void (Window serverFrame));
